--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ a:hover, a:focus {
   top: 0;
   left: 0;
   right: 0;
-  position: relative;
+  position: sticky;
   z-index: 1030;
 }
 
@@ -7245,4 +7245,31 @@ h1, h2, h3, h4, h5, h6 {
 
 .blur{
     filter: blur(1px) brightness(0.9);
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
+}
+.video-container {
+position: relative;
+padding-bottom: 50%;
+padding-top: 30px; height: 0;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
 }
